[gd_scene load_steps=3 format=2]

[ext_resource path="res://controls/Keyboard3x3.gd" type="Script" id=1]
[ext_resource path="res://controls/GameButton.tscn" type="PackedScene" id=2]

[node name="Keyboard3x3" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 620.0
margin_bottom = 200.0
custom_constants/separation = 10

[node name="GameButton1" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 200.0

[node name="GameButton2" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_right = 410.0
margin_bottom = 200.0

[node name="GameButton3" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 420.0
margin_right = 620.0
margin_bottom = 200.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 620.0
margin_bottom = 410.0
custom_constants/separation = 10

[node name="GameButton4" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 200.0

[node name="GameButton5" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_right = 410.0
margin_bottom = 200.0

[node name="GameButton6" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 420.0
margin_right = 620.0
margin_bottom = 200.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 420.0
margin_right = 620.0
margin_bottom = 620.0
custom_constants/separation = 10

[node name="GameButton7" parent="VBoxContainer/HBoxContainer3" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 200.0

[node name="GameButton8" parent="VBoxContainer/HBoxContainer3" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_right = 410.0
margin_bottom = 200.0

[node name="GameButton9" parent="VBoxContainer/HBoxContainer3" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 420.0
margin_right = 620.0
margin_bottom = 200.0
